testsuite/tests/module/mod2.stderr

mod2.hs:3:1: error: [GHC-87110]
    Could not find module ‘N’.
    Use -v to see a list of the files searched for.
