testsuite/tests/module/mod2.hs
-- !!! Qualified import of unknown module
module M where
import qualified N
